Bug 117706 - Copying multiple rows from one sheet to another causes the first row to be overwritten by the last one
Summary: Copying multiple rows from one sheet to another causes the first row to be ov...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: x86-64 (AMD64) All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-05-19 10:56 UTC by Woowbat
Modified: 2021-02-18 23:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Woowbat 2018-05-19 10:56:41 UTC
Description:
Copying random multiple rows from one sheet to another (starting form the first one ) causes the first row in the queue to be overwritten by the last one. So you have two last one in the new one. As the first one and the last one.The first one disappear.

Actual Results:  
Happens each time you do that. Have to copy additionally a row not used as the first one  

Expected Results:
works o.k.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 Telesto 2018-05-19 11:27:42 UTC
Repro with
Version: 6.1.0.0.alpha1+
Build ID: c5f8a296fcfc08f8ac441cb8300a7565caa50b53
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-05-10_03:01:48
Locale: nl-NL (nl_NL); Calc: CL

but not with
Version: 6.0.0.1.0+
Build ID: 47cc374c0659fd3db74a1b184c870eaa56bc385b
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Buovjaga 2018-05-23 12:09:44 UTC
Bisected to https://cgit.freedesktop.org/libreoffice/core/commit/?id=6529cd54c29c5800340530a1b8182c341fbeeafb

commit 6529cd54c29c5800340530a1b8182c341fbeeafb (patch)
tree 2b09ee9429a0759b8104575aa97e1f4aeadd443e
parent 4ea605cb5c31fe4c7d3931a656782a652b4d96fc (diff)
don't use heap for elements in ScRangeList
no need to store small objects like this out of line.

Also
 - add move constructor and move assignment operator
 - drop Assign method since it now has the same
   signature as push_back

Change-Id: I9a8647d3a11f24166a83d399a358a2bce3b2cb79
Reviewed-on: https://gerrit.libreoffice.org/50899

Adding Noel to CC.

Same blame for bug 116421.

To repro, I added the cell contents so there were empty rows between and then I Ctrl-selected the cells.
Comment 3 Commit Notification 2018-05-24 12:10:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c10928e703366341ab912c42e8959a087a7fa9ff

tdf#117706 Multi-select copying rows between sheets broken

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2018-05-24 13:36:02 UTC
Verily verified!

This was not Win-only, so tweaking OS field.

Arch Linux 64-bit
Version: 6.1.0.0.alpha1+
Build ID: eeaf6dee2d278eaa037d95a756ad0ffab3314bc2
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 24th 2018
Comment 5 Commit Notification 2021-02-18 23:23:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3a1e3bd2bb71d084233dfb791c1d0c3dd81b43e5

tdf#117706: sc_uicalc: Add unittest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.