tdf#117706 Multi-select copying rows between sheets broken

regression from

   commit 6529cd54c29c5800340530a1b8182c341fbeeafb
   don't use heap for elements in ScRangeList

where I converted some loop variables from pointers to refs, forgetting
to assigning to a ref is quite different from assigning to a pointer

Change-Id: I4a365006317d16a24cbb1b43994906a0d4b4d424
Reviewed-on: https://gerrit.libreoffice.org/54756
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>